# Deep-Dark

./: .gitignore  CMakeLists.txt  Deep-Dark.sln
Deep Dark/: Deep Dark.cpp  Deep Dark.vcxproj  Deep Dark.vcxproj.filters
Deep Dark/TGUI/: AbsoluteOrRelativeValue.hpp  Animation.hpp  Any.hpp  Base64.hpp  Color.hpp  Components.hpp  Config.hpp.in  Container.hpp  CopiedPtr.hpp  CopiedSharedPtr.hpp  Cursor.hpp  CustomWidgetForBindings.hpp  DefaultBackendWindow.hpp  Duration.hpp  Event.hpp  Exception.hpp  FileDialogIconLoader.hpp  Filesystem.hpp  Font.hpp  Global.hpp  Keyboard.hpp  Layout.hpp  ObjectConverter.hpp  Optional.hpp  Outline.hpp  Rect.hpp  RelFloatRect.hpp  RenderStates.hpp  Signal.hpp  SignalManager.hpp  Sprite.hpp  String.hpp  StringView.hpp  SubwidgetContainer.hpp  SvgImage.hpp  Text.hpp  TextStyle.hpp  Texture.hpp  TextureData.hpp  TextureManager.hpp  (+10 more)
Deep Dark/TGUI/Backend/: GLFW-GLES2.hpp  GLFW-OpenGL3.hpp  SDL-GLES2.hpp  SDL-GPU.hpp  SDL-OpenGL3.hpp  SDL-Renderer.hpp  SDL-TTF-GLES2.hpp  SDL-TTF-OpenGL3.hpp  SFML-Graphics.hpp  SFML-OpenGL3.hpp  raylib.hpp
Deep Dark/TGUI/Loading/: DataIO.hpp  Deserializer.hpp  ImageLoader.hpp  Serializer.hpp  Theme.hpp  ThemeLoader.hpp  WidgetFactory.hpp
Deep Dark/TGUI/Renderers/: BoxLayoutRenderer.hpp  ButtonRenderer.hpp  ChatBoxRenderer.hpp  CheckBoxRenderer.hpp  ChildWindowRenderer.hpp  ColorPickerRenderer.hpp  ComboBoxRenderer.hpp  ContextMenuRenderer.hpp  EditBoxRenderer.hpp  FileDialogRenderer.hpp  GroupRenderer.hpp  KnobRenderer.hpp  LabelRenderer.hpp  ListBoxRenderer.hpp  ListViewRenderer.hpp  MenuBarRenderer.hpp  MenuWidgetBaseRenderer.hpp  MessageBoxRenderer.hpp  PanelListBoxRenderer.hpp  PanelRenderer.hpp  PictureRenderer.hpp  ProgressBarRenderer.hpp  RadioButtonRenderer.hpp  RangeSliderRenderer.hpp  ScrollablePanelRenderer.hpp  ScrollbarRenderer.hpp  SeparatorLineRenderer.hpp  SliderRenderer.hpp  SpinButtonRenderer.hpp  SplitContainerRenderer.hpp  TabsRenderer.hpp  TextAreaRenderer.hpp  TreeViewRenderer.hpp  WidgetRenderer.hpp
Deep Dark/TGUI/Widgets/: BitmapButton.hpp  BoxLayout.hpp  BoxLayoutRatios.hpp  Button.hpp  ButtonBase.hpp  CanvasBase.hpp  ChatBox.hpp  CheckBox.hpp  ChildWindow.hpp  ClickableWidget.hpp  ColorPicker.hpp  ComboBox.hpp  ContextMenu.hpp  EditBox.hpp  EditBoxSlider.hpp  FileDialog.hpp  Grid.hpp  Group.hpp  GrowHorizontalLayout.hpp  GrowVerticalLayout.hpp  HorizontalLayout.hpp  HorizontalWrap.hpp  Knob.hpp  Label.hpp  ListBox.hpp  ListView.hpp  MenuBar.hpp  MenuWidgetBase.hpp  MessageBox.hpp  Panel.hpp  PanelListBox.hpp  Picture.hpp  ProgressBar.hpp  RadioButton.hpp  RadioButtonGroup.hpp  RangeSlider.hpp  RichTextLabel.hpp  ScrollablePanel.hpp  Scrollbar.hpp  SeparatorLine.hpp  (+10 more)
Deep Dark/configs/stage_data/: stage_0.json  stage_1.json
Deep Dark/game_saves/: SaveSystem.cpp  SaveSystem.h  stage_save.json  unit_save.json
Deep Dark/imgui/: imconfig.h
Deep Dark/include/configs/: StageConfig.h  UnitConfig.h  UnitConfigConstants.h
Deep Dark/include/enums/: AnimationEvent.h  AugmentTypes.h  EventTypes.h  StageStatus.h  TransitionID.h  UnitEnums.h
Deep Dark/include/game_states/: GameState.h  MainMenusGameState.h  PreparationState.h  StageGameState.h
Deep Dark/include/menus/: ArmoryMenu.h  Menu.h  StageNodeMenu.h  StagePreviewMenu.h  StageResultsScreen.h  StageSelect.h  StageSetMenu.h  StageUI.h  StartMenu.h  WorkshopMenu.h
Deep Dark/include/misc/: UnitEnums.h
Deep Dark/include/saves/: PlayerSaveData.h  StageSaveData.h  UnitSaveData.h
Deep Dark/include/stage/: ActionObject.h  Base.h  Lane.h  Loadout.h  Projectile.h  Stage.h  StageManager.h  StageRecord.h  StatusEffect.h  Surge.h  Teleporter.h  Trap.h  Unit.h  UnitPool.h
Deep Dark/include/systems/: ButtonManager.h  Camera.h  Loadout.h  Observer.h  StageManager.h  StageRecord.h  StateManager.h  TextureManager.h  Tween.h
Deep Dark/include/unit/: Unit.h  UnitAnimation.h  UnitCombat.h  UnitData.h  UnitMovement.h  UnitStatus.h
Deep Dark/include/utilities/: ArmorySlot.h  Augment.h  CustomErrors.hpp  Easing.hpp  EntityConfigs.h  Pathing.h  ProjectileData.h  UILayout.h  UnitData.h  Utils.h  pch.h
Deep Dark/include/visuals/: Animation.h  ArmorySlot.h  Button.h  MouseCursor.h  Slider.h
Deep Dark/scripts/game_states/: GameState.h  MainMenusGameState.cpp  MainMenusGameState.h  PreparationState.cpp  StageGameState.cpp  StageGameState.h
Deep Dark/scripts/menus/: ArmoryMenu.cpp  ArmoryMenu.h  Menu.h  StageSelect.cpp  StageSelect.h  StageUI.cpp  StageUI.h  StartMenu.cpp  StartMenu.h
Deep Dark/scripts/misc/: ActionStates.h  ChallengeTypes.h  Easing.hpp  UnitEnums.h
Deep Dark/scripts/stage/: ActionObject.cpp  ActionObject.h  Base.cpp  Base.h  BaseCannon.cpp  BaseCannon.h  Lane.h  Stage.cpp  Stage.h  StatusEffect.h  Surge.cpp  Surge.h  Teleporter.h  Trap.cpp  Trap.h  Unit.cpp  Unit.h  UnitData.h
Deep Dark/scripts/systems/: ButtonManager.cpp  ButtonManager.h  Camera.cpp  Camera.h  Loadout.cpp  Loadout.h  Observer.cpp  Observer.h  StageManager.cpp  StageManager.h  StageRecord.h  StateManager.cpp  Tween.h
Deep Dark/scripts/utilities/: Bounds.h  UILayout.h
Deep Dark/scripts/visuals/: Animation.cpp  Animation.h  Button.cpp  Button.h  Menu.h
Deep Dark/source/configs/: StageConfig.cpp  UnitConfig.cpp
Deep Dark/source/game_states/: MainMenusGameState.cpp  PreparationState.cpp  StageGameState.cpp
Deep Dark/source/menus/: ArmoryMenu.cpp  Menu.cpp  StageNodeMenu.cpp  StagePreviewMenu.cpp  StageResultsScreen.cpp  StageSelect.cpp  StageSetMenu.cpp  StageUI.cpp  StartMenu.cpp  Window.cpp  WorkshopMenu.cpp
Deep Dark/source/saves/: SaveSystem.cpp  StageSaveData.cpp  UnitSaveData.cpp
Deep Dark/source/stage/: ActionObject.cpp  Base.cpp  BaseCannon.cpp  Lane.cpp  Loadout.cpp  Projectile.cpp  Stage.cpp  StageManager.cpp  Surge.cpp  Trap.cpp  Unit.cpp  UnitPool.cpp
Deep Dark/source/systems/: Camera.cpp  Observer.cpp  StageManager.cpp  (+2 more)
Deep_Dark/: .gitignore  Deep_Dark.cpp  Deep_Dark.vcxproj  Deep_Dark.vcxproj.filters
Deep_Dark/game_saves/: player_save.json  stage_save.json  unit_save.json
Deep_Dark/include/: Game.h
Deep_Dark/source/: Game.cpp
(+300 files in other folders)
